weddingclipart.com (archived on 2008-03-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 4855,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.5,
  "homepage_snapshot_redirected_domain": "weddingclipart.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080404024509id_/http://www.weddingclipart.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080404024509id_/http%3A//weddingclipart.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "weddingclipart.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080304021528id_/http%3A//www.weddingclipart.com/wca/privacyPolicy/view.do",
  "policy_title": "Privacy Policy",
  "policy_url": "weddingclipart.com/wca/privacyPolicy/view.do",
  "sha1": "b44d8d68d308df5236b216aba944b6b5502dd3a9",
  "simhash": 18050199372871757394,
  "simhash_updated": true,
  "site_hostname": "weddingclipart.com",
  "site_url": "http://weddingclipart.com",
  "smog": 14.65,
  "strict_updated": true,
  "timestamp": "20080304021528",
  "word_count": 764,
  "year": 2008
}

--- a/w/we/wed/weddingclipart.com.html
+++ b/w/we/wed/weddingclipart.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the weddingclipart.com privacy policy that was archived on 2007-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071222161639id_/http%3A//www.weddingclipart.com/wca/privacyPolicy/view.do) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the weddingclipart.com privacy policy that was archived on 2008-03-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080304021528id_/http%3A//www.weddingclipart.com/wca/privacyPolicy/view.do) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 
@@ -26,6 +26,8 @@
 </script>
 
 <!--- end header.jsp -->
+
+<title>Privacy Policy</title>
 
 
 
@@ -113,23 +115,23 @@ document.write("<SCR" + "IPT language='JavaScript' type='text/javascript' "
 <form method="post" action="/wca/validateSearch.do"></form>	
 	<td align="right"><nobr>
 	<b>search</b>
-	<select name="type">
+	<select id="search-type" name="type">
 	  <option value="-1">Any</option>
 	  <option value="1">Clipart</option>
 	  <option value="2">Photos</option>
 	  <option value="5">Templates</option>
-	  <option value="6">Illustrations</option>
+    
 	  <option value="7">Borders</option>
 	  <option value="8">Backgrounds</option>
 	  <option value="9">Word Art</option>
-	  <option value="10">Icons</option>
-	  <option value="11">Logos</option>
+    
+	  <option value="13">Powerpoint</option>
 	</select>
 	
 	
-	<input type="text" name="query">
+	<input id="search-query" type="text" name="query">
 	
-	<input type="submit" name="submit" value="go" class="submit"></nobr></td>
+	<input id="search-go" type="submit" name="submit" value="go" class="submit"></nobr></td>
 
 	</tr>
 	</tbody></table>
