--- a/d/dr/dre/dreambox.com.html
+++ b/d/dr/dre/dreambox.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dreambox.com privacy policy that was archived on 2007-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071210062530id_/http%3A//www.dreambox.com/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dreambox.com privacy policy that was archived on 2008-03-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080306064406id_/http%3A//www.dreambox.com/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -379,7 +379,7 @@ Or email us at:<a href="mailto:privacy@dreambox.com">privacy@dreambox.com</a>
 <table border="0" width="790" cellspacing="0" cellpadding="0" bgcolor="#F2F2F2">
 	<tbody><tr>
 		<td valign="top" align="center" class="footer">
-		© 2006-2007 DreamBox Learning, Inc. All rights reserved. <a href="/legal" class="footer">legal</a>
+		© 2008 DreamBox Learning, Inc. All rights reserved. <a href="/legal" class="footer">legal</a>
 		</td>
 	</tr>
 </tbody></table>
