--- a/r/re/rec/reciperate.com.html
+++ b/r/re/rec/reciperate.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the reciperate.com privacy policy that was archived on 2007-10-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071012094750id_/http%3A//www.reciperate.com/content/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the reciperate.com privacy policy that was archived on 2008-03-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080307064520id_/http%3A//www.reciperate.com/content/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -704,26 +704,26 @@ urchinTracker();
 </li><li>
     <h2>Example Users</h2>
 
-       <a href="http://www.reciperate.com/search/users/">Search Users</a><br><br>            <a href="http://www.reciperate.com/rboren/">
-            <img src="http://www.reciperate.com/_icon/user/30/h/100/w/100" border="0" alt="user icon"></a><br>
+       <a href="http://www.reciperate.com/search/users/">Search Users</a><br><br>            <a href="http://www.reciperate.com/siminiyas/">
+            <img src="http://www.reciperate.com/_icon/user/69/h/100/w/100" border="0" alt="user icon"></a><br>
             <span class="userdetails">
-                <a href="http://www.reciperate.com/rboren/">Russ</a>
+                <a href="http://www.reciperate.com/siminiyas/">siminiyas</a>
+            </span><br><br>            <a href="http://www.reciperate.com/satinder/">
+            <img src="http://www.reciperate.com/_icon/user/68/h/100/w/100" border="0" alt="user icon"></a><br>
+            <span class="userdetails">
+                <a href="http://www.reciperate.com/satinder/">SATINDER</a>
             </span><br><br>            <a href="http://www.reciperate.com/tonybologna/">
             <img src="http://www.reciperate.com/_icon/user/5/h/100/w/100" border="0" alt="user icon"></a><br>
             <span class="userdetails">
                 <a href="http://www.reciperate.com/tonybologna/">Tony Bologna</a>
-            </span><br><br>            <a href="http://www.reciperate.com/blackbetty/">
-            <img src="http://www.reciperate.com/_icon/user/32/h/100/w/100" border="0" alt="user icon"></a><br>
+            </span><br><br>            <a href="http://www.reciperate.com/peterc/">
+            <img src="http://www.reciperate.com/_icon/user/36/h/100/w/100" border="0" alt="user icon"></a><br>
             <span class="userdetails">
-                <a href="http://www.reciperate.com/blackbetty/">Black Betty</a>
-            </span><br><br>            <a href="http://www.reciperate.com/deeohgee/">
-            <img src="http://www.reciperate.com/_icon/user/41/h/100/w/100" border="0" alt="user icon"></a><br>
+                <a href="http://www.reciperate.com/peterc/">Peter Curtin</a>
+            </span><br><br>            <a href="http://www.reciperate.com/lizzylou/">
+            <img src="http://www.reciperate.com/_icon/user/58/h/100/w/100" border="0" alt="user icon"></a><br>
             <span class="userdetails">
-                <a href="http://www.reciperate.com/deeohgee/">DeeOhGee</a>
-            </span><br><br>            <a href="http://www.reciperate.com/eko/">
-            <img src="http://www.reciperate.com/_icon/user/8/h/100/w/100" border="0" alt="user icon"></a><br>
-            <span class="userdetails">
-                <a href="http://www.reciperate.com/eko/">EKO</a>
+                <a href="http://www.reciperate.com/lizzylou/">LIz Moore</a>
             </span><br><br><a href="http://www.reciperate.com/search/users/">Search Users</a>
 
 
@@ -776,7 +776,7 @@ urchinTracker();
 <li>This privacy policy relates to use of the reciperate web site at http://www.reciperate.com/</li>
 <li>This privacy policy covers how reciperate (hereafter named 'we') will treat personal information that we collect. Personal information is <b>your</b> information and includes identifiers like your name, address, email address, phone number.</li>
 <li>We will not share your personal information with any other party.</li>
-<li>We will not send you any junk emails. Furthermore we will not send you any information unless you have specifically requested we do so. An exception to this rule will be the initial email validation when you create a new account.</li>
+<li>Periodically we may send updates about the site to your email.  We will not send you any junk emails. Furthermore we will not send you any information unless you have specifically requested we do so. An exception to this rule will be the initial email validation when you create a new account.</li>
 </ul>
 
 <p><b>Changes to this Privacy Policy</b></p>
