--- a/t/th/the/thecelebritycafe.com.html
+++ b/t/th/the/thecelebritycafe.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thecelebritycafe.com privacy policy that was archived on 2007-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071206142534id_/http%3A//thecelebritycafe.com/other/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecelebritycafe.com privacy policy that was archived on 2008-03-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080307143308id_/http%3A//thecelebritycafe.com/other/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
   <title>TheCelebrityCafe.com Privacy Policy</title>
@@ -54,7 +54,7 @@
 
 
 </td>
-        <td width="27%" background="http://TheCelebritycafe.com/Images/tobbarblue.jpg" bgcolor="#6699CC"><div align="center" class="styleDate"> Thursday December 06 2007</div></td>
+        <td width="27%" background="http://TheCelebritycafe.com/Images/tobbarblue.jpg" bgcolor="#6699CC"><div align="center" class="styleDate"> Friday March 07 2008</div></td>
       </tr>
     </tbody></table></td>
   </tr>
@@ -381,12 +381,15 @@ width=160 height=600 border=1></a></noscript>
 <a href="http://www.cheappremiumtickets.com/Concert/Cream_Reunion_Tour.cfm" target="_blank">Cream Reunion Tour</a><br>
 
 <br>
-<a href="http://www.barrywins.com" target="_blank">Online Casino</a><br>
-<a href="http://www.mapfocus.com" target="_blank">Casino</a><br>
+<a href="http://www.ticketsolutions.com/SearchResults.asp?EventHeadlinerID=108330" target="_blank">Van Halen Tickets</a><br>
 
 <br>
-<a href="http://www.ticketsolutions.com/SearchResults.asp?EventHeadlinerID=108330" target="_blank">Van Halen Tickets</a>
-<br>
+<a href="http://www.nopactalent.com" target="_blank">Celebrity Booking Agency</a><br>
+<a href="http://www.comedianbookings.com" target="_blank">Comedian Booking Agency</a><br>
+<a href="http://www.allamericanspeakers.com" target="_blank">Celebrity Speakers Bureau</a><br>
+<a href="http://www.talentnewsnetwork.com" target="_blank">Celebrity News Network</a><br><br>
+
+
 
 <a href="http://www.aceticket.com/concerts-home/" target="_blank">Concert Tickets</a><br>
 <br>
@@ -399,17 +402,21 @@ width=160 height=600 border=1></a></noscript>
 
 <br>
 <a href="http://www.idealclothing.net" target="_blank">Prom Dresses</a><br>
-<a href="http://www.idealclothing.net/catalog/prom_dresses_2008/" target="_blank">Prom Dresses 2008</a><br>
-<a href="http://www.idealclothing.net/catalog/homecoming_2008/" target="_blank">Homecoming 2008</a><br>
-<a href="http://www.idealclothing.net/catalog/prom_dresses_2008/jovani_prom_dresses/" target="_blank">Jovani Prom Dresses</a><br>
-<a href="http://www.idealclothing.net/catalog/prom_dresses_2008/mori_lee_prom_dresses/" target="_blank">Mori Lee Prom Dresses</a><br> 
+<a href="http://www.idealclothing.net/catalog/prom_dresses_2008" target="_blank">Prom Gowns</a><br>
+
 
 <br>
 <a href="http://de.partypoker.com" target="_blank">Online Poker</a><br> 
+<br>
+<a href="http://www.barrywins.com" target="_blank">Online Casino</a><br>
+<a href="http://www.mapfocus.com" target="_blank">Casino</a><br>
 
+<br>
+<a href="http://www.fenceauthority.net" target="_blank">DIY Fences</a><br>
 
 <br>
 <a href="http://www.shopshop.com" target="_blank">Prom Dresses Bridesmaid</a><br>
+<a href="http://www.arabcasino.org" target="_blank">كازينو</a><br>
 
 </span>
 </td>
@@ -425,8 +432,6 @@ width=160 height=600 border=1></a></noscript>
 
 
 <table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td>
-
-
 <!-- ValueClick Media 300x250 Medium Rectangle CODE for thecelebritycafe.com -->
 <script language="javascript" src="http://media.fastclick.net/w/get.media?sid=19756&amp;m=6&amp;tp=8&amp;d=j&amp;t=n"></script>
 <noscript><a href="http://media.fastclick.net/w/click.here?sid=19756&m=6&c=1" target="_blank">
@@ -434,10 +439,6 @@ width=160 height=600 border=1></a></noscript>
 width=300 height=250 border=1></a></noscript>
 <!-- ValueClick Media 300x250 Medium Rectangle CODE for thecelebritycafe.com -->
 
-
-
-
-		
 </td><td> 
 <!-- -------------- Advertising.com ------ TheCelebrityCafe.com - TheCelebrityCafe - 300x250-726734 ------------ -->
 <script type="text/javascript">
@@ -462,7 +463,7 @@ var ACE_AR = {Site: '726734', Size: '300250'};
 </p><center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=TheCelebrityCafecom&adSpace=ROS&size=468x60&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=TheCelebrityCafecom&amp;adSpace=ROS&amp;size=468x60&amp;requestID=19754710590.5293550841749532"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=TheCelebrityCafecom&amp;adSpace=ROS&amp;size=468x60&amp;requestID=19754725110.5603463139529268"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=TheCelebrityCafecom&adSpace=ROS&size=468x60&requestID=488016924" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=TheCelebrityCafecom&adSpace=ROS&size=468x60&requestID=488016924" 
