--- a/q/qu/qui/quizilla.com.html
+++ b/q/qu/qui/quizilla.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the quizilla.com privacy policy that was archived on 2007-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071224190027id_/http%3A//www.quizilla.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the quizilla.com privacy policy that was archived on 2008-03-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080308150244id_/http%3A//quizilla.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head> <title> Privacy Policy </title>
 <!-- header -->
@@ -26,7 +26,7 @@ urchinTracker();
 <div style="display: none;">
 <script type="text/javascript" src="/js/omni/rep_object.js"></script>
 <script type="text/javascript" src="/js/omni/omni_config_qz.js"></script>
-<script type="text/javascript" src="/js/omni/s_code_remote.js"></script><img name="s_i_viaquiz" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/viaquiz/1/G.7-PD-R/s18016612469276?[AQB]&amp;ndh=1&amp;t=24/1/2020%2011%3A28%3A23%201%200&amp;pageName=/web.archive.org/web/20071224190027id_/http%253A//www.quizilla.com/privacy_policy.html&amp;g=https%3A//web.archive.org/web/20071224190027id_/http%253A//www.quizilla.com/privacy_policy.html&amp;ch=web.archive.org&amp;cc=USD&amp;h2=web.archive.org&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+<script type="text/javascript" src="/js/omni/s_code_remote.js"></script><img name="s_i_viaquiz" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/viaquiz/1/G.7-PD-R/s24030810385161?[AQB]&amp;ndh=1&amp;t=24/1/2020%2014%3A31%3A58%201%200&amp;pageName=/web.archive.org/web/20080308150244id_/http%253A//quizilla.com/privacy_policy.html&amp;g=https%3A//web.archive.org/web/20080308150244id_/http%253A//quizilla.com/privacy_policy.html&amp;ch=web.archive.org&amp;cc=USD&amp;h2=web.archive.org&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 </div>
 <!-- omniture end -->
 
@@ -64,7 +64,7 @@ urchinTracker();
     <div class="logo"> <a href="/"><img src="/images/quizpage_logo.gif" border="0" class="quizlogo"></a> 
     </div>
     <div class="banner">
-<script src="/js/dc/dc_728x90.js" type="text/javascript"></script><script src="https://web.archive.org/web/20080402164424/http://ad.doubleclick.net/adj/quizilla.nol/generic;section=generic;sz=728x90;tile=1;dcopt=ist;ord=412095508775533400?" type="text/javascript"></script><div style="display:none;"><script src="https://web.archive.org/web/20080402164424/http://ad.doubleclick.net/adj/quizilla.nol/generic;section=generic;sz=1x2;tile=2;node=survey;dcopt=ist;ord=412095508775533400?" type="text/javascript"></script></div>
+<script src="/js/dc/dc_728x90.js" type="text/javascript"></script><script src="https://web.archive.org/web/20080402164424/http://ad.doubleclick.net/adj/quizilla.nol/generic;section=generic;sz=728x90;tile=1;dcopt=ist;ord=260870477415787700?" type="text/javascript"></script><div style="display:none;"><script src="https://web.archive.org/web/20080402164424/http://ad.doubleclick.net/adj/quizilla.nol/generic;section=generic;sz=1x2;tile=2;node=survey;dcopt=ist;ord=260870477415787700?" type="text/javascript"></script></div>
     </div>
   </div>
   
@@ -298,6 +298,7 @@ New York, NY 10036</blockquote>
         <br>
         <div style="padding:10px;"><a href="http://www.the-n.com/" target="_blank" style="color:#000;font-weight:bold;">Part of The-N Network<br>
         <img src="/images/the-n_logo.gif" border="0"></a></div>
+<img src="/images/nick_kf.gif">
    </div>
   
 </div>
