furrygirl.com (archived on 2008-03-08)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 768,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "standard",
  "flesch_kincaid": 7.22,
  "homepage_snapshot_redirected_domain": "furrygirl.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080405163244id_/http://www.furrygirl.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080405163244id_/http%3A//furrygirl.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "furrygirl.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080308163612id_/http%3A//www.furrygirl.com/privacy.html",
  "policy_title": "Furry Girl > Privacy",
  "policy_url": "furrygirl.com/privacy.html",
  "sha1": "a7676fbb63346c2103e53303ef0abbcf3d93d3bb",
  "simhash": 7425125025719747400,
  "simhash_updated": false,
  "site_hostname": "furrygirl.com",
  "site_url": "http://furrygirl.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20080308163612",
  "word_count": 135,
  "year": 2008
}

--- a/f/fu/fur/furrygirl.com.html
+++ b/f/fu/fur/furrygirl.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the furrygirl.com privacy policy that was archived on 2007-07-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070703224038id_/http%3A//www.furrygirl.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the furrygirl.com privacy policy that was archived on 2008-03-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080308163612id_/http%3A//www.furrygirl.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Furry Girl &gt; Privacy</title>
@@ -15,15 +15,15 @@ A:hover {text-decoration: underline; color: #000000}
 
 <body background="http://www.furrygirl.com/images/back.jpg" text="000000">
 <div align="center"> 
-  <table width="800" border="0" align="center" cellpadding="3">
+  <table width="900" border="0" align="center" cellpadding="3">
     <tbody><tr> 
       <td bgcolor="003366"> 
         <div align="center">
-          <table width="792" border="0" align="center" cellpadding="0">
+          <table width="892" border="0" align="center" cellpadding="0">
             <tbody><tr> 
               <td bgcolor="#FFFFFF"> <b><br>
                 </b> 
-                <table width="780" border="0" cellpadding="0" align="center">
+                <table width="880" border="0" cellpadding="0" align="center">
                   <tbody><tr> 
                     <td> 
                       <p><font size="2" face="Verdana" color="003366"><b>Privacy 
@@ -70,36 +70,10 @@ A:hover {text-decoration: underline; color: #000000}
                 <br>
               </td>
             </tr></tbody></table>
-          <font face="Verdana" size="1" color="#FFFFFF"><b><font size="2" color="336699">&lt; 
-          <a href="http://www.furrygirl.com/records.html"><font color="#999999">All 
-          Models Are Over 18</font></a> | <font color="#999999">Copyright 2002-2007</font> 
-          | <a href="https://support.ccbill.com/"><font color="#999999">Lookup/Cancel 
-          Membership</font></a> &gt;</font></b></font></div>
+          <font face="Verdana" size="2" color="336699"><b>&lt; <a href="http://www.furrygirl.com/records.html"><font color="#999999">All 
+          Models Are Over 18</font></a> |<font color="#999999"> Copyright 2002-2008 </font>| <a href="https://support.ccbill.com/"><font color="#999999">Lookup/Cancel 
+          Membership</font></a> &gt;</b></font></div>
       </td></tr></tbody></table></div>
-<p align="center"><br><!-- MASTERSTATS.COM COUNTER -->
-
-<script language="JavaScript"><!--
-d_=document;ex_=escape(d_.referrer);pg_=escape(window.location.href);
-r_=Math.random();MSIE=(navigator.appName.substring(0,2)=="Mi")?1:0;
-d_.write(
-'<A HREF="http://link.masterstats.com/stat-redir?id=256" TARGET=_blank><IMG\n'+
-'SRC="http://image.masterstats.com/cnt?id=256&ex='+ex_+'&pg='+pg_+
-'&r='+r_+'" WIDTH=100 HEIGHT=60\n'+
-'ALT="MasterStats.com" BORDER=0 HSPACE=0 VSPACE=0></A>\n');
-// --></script><a href="http://link.masterstats.com/stat-redir?id=256" target="_blank"><img src="http://image.masterstats.com/cnt?id=256&amp;ex=&amp;pg=https%3A//web.archive.org/web/20070703224038id_/http%253A//www.furrygirl.com/privacy.html&amp;r=0.1799195313673172" width="100" height="60" alt="MasterStats.com" border="0" hspace="0" vspace="0"></a>
-
-<script language="JavaScript"><!--
-if(MSIE)d_.write(unescape("%3C%21%2D%2D")+"\n");
-// --></script>
-  <noscript> <A HREF="http://link.masterstats.com/stat-redir?id=256" TARGET=_blank><IMG
-SRC="http://image.masterstats.com/cnt?id=256" WIDTH=100 HEIGHT=60
-ALT="MasterStats.com" BORDER=0 HSPACE=0 VSPACE=0 align="middle"></A> </noscript> 
-  <script language="JavaScript"><!--
-if(MSIE)d_.write(unescape("%2D%2D%3E")+"\n");
-// --></script>
-
-<!-- MASTERSTATS.COM COUNTER END -->
- 
 
 
-</p></body></html>
+</body></html>
