expatexpress.com (archived on 2008-03-08)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 858,
  "classifier_probability": 0.87,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.46,
  "homepage_snapshot_redirected_domain": "expatexpress.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080415194230id_/http://www.expatexpress.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080415194230id_/http%3A//expatexpress.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "expatexpress.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080308182518id_/http%3A//www.expatexpress.com/Expat/jsp/help/privacy.jsp",
  "policy_title": "ExpatExpress",
  "policy_url": "expatexpress.com/Expat/jsp/help/privacy.jsp",
  "sha1": "247651176b69deb8d8028c305046993e0dcb5d17",
  "simhash": 4177625040081643863,
  "simhash_updated": false,
  "site_hostname": "expatexpress.com",
  "site_url": "http://expatexpress.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20080308182518",
  "word_count": 132,
  "year": 2008
}

--- a/e/ex/exp/expatexpress.com.html
+++ b/e/ex/exp/expatexpress.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the expatexpress.com privacy policy that was archived on 2007-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071226175340id_/http%3A//www.expatexpress.com/Expat/jsp/help/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the expatexpress.com privacy policy that was archived on 2008-03-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080308182518id_/http%3A//www.expatexpress.com/Expat/jsp/help/privacy.jsp) for the most accurate reproduction.-->
 
 <html><head>
  <title>ExpatExpress</title>
@@ -37,6 +37,7 @@ var sc_security='ff44ff6e';
 <option value="43">Brazil</option>
 <option value="31">Canada</option>
 <option value="3">China</option>
+<option value="51">Columbia</option>
 <option value="5">Cyprus</option>
 <option value="46">Finland</option>
 <option value="27">France</option>
@@ -124,7 +125,7 @@ Loading Menu . . .
    <a href="/Expat/jsp/help/contact.jsp">Contact Us</a>
    &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="/Expat/servlet/FrontEnd?action=Preferences.SetLanguage&amp;language=ja">Japanese</a>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   © 2007 ExpatExpress
+   © 2008 ExpatExpress
   </td>
  </tr>
 </tbody></table>
@@ -196,5 +197,5 @@ Loading Menu . . .
 
 
 
-<!--- Copyright 2007 Access Technology Solutions All Rights Reserved --->
+<!--- Copyright 2008 Access Technology Solutions All Rights Reserved --->
 </body></html>
