wormly.com (archived on 2008-03-09)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3235,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.29,
  "homepage_snapshot_redirected_domain": "wormly.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080329132331id_/http://www.wormly.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080329132331id_/http%3A//wormly.com",
  "interval": "2008_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "wormly.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080309011231id_/http%3A//www.wormly.com/help/about/privacy",
  "policy_title": "Privacy Policy - Wormly",
  "policy_url": "wormly.com/help/about/privacy",
  "sha1": "aeb695bc2936d708e814efc326a5d8dcd20fdbde",
  "simhash": 6771056964627702873,
  "simhash_updated": false,
  "site_hostname": "wormly.com",
  "site_url": "http://wormly.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20080309011231",
  "word_count": 484,
  "year": 2008
}

--- a/w/wo/wor/wormly.com.html
+++ b/w/wo/wor/wormly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wormly.com privacy policy that was archived on 2007-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071206044227id_/http%3A//www.wormly.com/help/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wormly.com privacy policy that was archived on 2008-03-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080309011231id_/http%3A//www.wormly.com/help/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,14 +7,14 @@
 
 		
 	
-	<script type="text/javascript" src="/jsb/wormly.1187671742.js"></script>
+	<script type="text/javascript" src="/jsb/wormly.1204690223.js"></script>
 <script type="text/javascript">
 				// <![CDATA[
 				function AlbassInit() { new AlbCtxHlp(0);ProtoTip.attachTooltipBehavior(); } SycuseAddEvent(window, "load", AlbassInit, false);
 					//]]>
 					</script>
 
-	<link rel="stylesheet" type="text/css" href="/css/global.1187671742.css">
+	<link rel="stylesheet" type="text/css" href="/css/global.1204690223.css">
 	
 	<link rel="shortcut icon" href="/favicon.ico">
 	
@@ -31,7 +31,7 @@
 		
 		
     	<h1 id="logo">
-    	    		<a href="/" title="Back to the Wormly home page"><img src="/images/wormly.455.png" alt="Wormly Uptime Monitoring" width="178" height="53"></a>
+    	    		<a href="/" title="Uptime Monitoring Home Page"><img src="/images/wormly.455.png" alt="Wormly Uptime Monitoring" width="178" height="53"></a>
     	    	</h1>
 
 		<div id="nav">
@@ -191,6 +191,7 @@ industry-standard 256-bit SSL encryption.</p>
 			<a href="/help/case-studies/case-study-sitepoint">Read on »</a>
 			</p>
 		
+		<p><a href="/testimonials">What are other people saying?</a></p>
 	</div>		
 
 	<div class="rightbox content">		
@@ -222,7 +223,7 @@ industry-standard 256-bit SSL encryption.</p>
 
 	</div>
     <div id="footer">
-		<p class="footer">© Copyright 2007 Wormly Performance™  All rights reserved.  
+		<p class="footer">© Copyright 2008 Wormly Performance™  All rights reserved.  
 		 <a href="/help/about/terms-of-service">Terms of use</a> | <a href="/help/about/privacy">Privacy</a>
 		</p>    
     </div>
