--- a/p/pa/pay/payworks.ca.html
+++ b/p/pa/pay/payworks.ca.html
@@ -1,14 +1,13 @@
-<!--The following is the downloaded HTML source of the payworks.ca privacy policy that was archived on 2007-11-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071108224041id_/http%3A//www.payworks.ca/payworks-canada-privacy-policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the payworks.ca privacy policy that was archived on 2008-03-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080309013856id_/http%3A//www.payworks.ca/payworks-canada-privacy-policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-CA"><head>
-<title>About Payworks Payroll Services Canada</title>
-<meta name="description" content="Payroll solutions by Payworks Payroll Services Canada. Secure web payroll software solutions with innovative online hr features for Canadian business.">
-<meta name="keywords" content="payworks,web payroll,payroll solutions,payroll software,payroll,outsourcing,pay statements,hr,canada,business">
+<title>Privacy policy for Payworks Payroll Services Canada</title>
+<meta name="description" content="Providing safe, secure web payroll and online HR software solutions for Canadian business.">
+<meta name="keywords" content="payworks,web, online, payroll, solutions,  outsourcing,canada,business, security, personal privacy, policy">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="imagetoolbar" content="no">
-<meta name="copyright" content="Copyright © 2000-2007 Payworks Payroll Services Canada, All Rights Reserved">
-<meta name="verify-v1" content="wv3Zr7mxM/+t8Ln0Ph6Sw5zihGJyuRKaUTjaDIYu7vw=">
+<meta name="copyright" content="Copyright © 2000-2008 Payworks Payroll Services Canada, All Rights Reserved">
 <link href="/styles/siteStyle.css" rel="stylesheet" type="text/css">
 <script src="/styles/HomePageRoller.js" type="text/javascript">
 </script>
@@ -16,6 +15,7 @@
 </head>
 
 <body>
+
 <table cellpadding="0" cellspacing="0" id="contentwrapper">
   <tbody><tr>
     <td width="40" rowspan="2" id="leftcolumn">&nbsp;</td>
@@ -39,7 +39,7 @@
 			<a href="payworks-legal-info.asp">Legal Disclaimer</a>
 		  </div>
           
-		<form action="http://www.payworks.ca/Members/index.asp" method="post" name="lgnForm">
+		<form action="https://www.payworks.ca/Members/index.asp" method="post" name="lgnForm">
           <table cellspacing="0" cellpadding="0" id="menuloginbox">
             <tbody><tr>
               <td><img src="http://www.payworks.ca/images/menu-headers/member-login.gif" alt="Member Login"></td>
@@ -60,7 +60,7 @@
         </div>
         <div id="content-links">
     <form method="get" action="http://www.payworks.ca/search/search.asp" name="zoom_searchform" id="zoom_searchform">
-	<a href="http://www.payworks.ca/">home</a><a href="http://www.payworks.ca/about-payworks-payroll-services.asp">about</a><a href="http://www.payworks.ca/contact-payworks-payroll-canada.asp">contact</a><a href="#" onclick="document.zoom_searchform.submit();">search</a>
+	<a href="http://www.payworks.ca/">home</a><a href="http://www.payworks.ca/about-payworks-payroll-services.asp">about</a><a href="http://www.payworks.ca/contact-payworks-payroll-canada.asp">contact</a><a href="#" onclick="document.zoom_searchform.submit();" rel="nofollow">search</a>
 	
 	  <input type="text" name="zoom_query" style="margin-top:2px;padding-top:0px;">
 	
@@ -96,8 +96,11 @@
 		  <p>This Privacy Policy was last updated on 9/15/2007.<br><br></p>
         </div>
       </div>
-              <div id="footer-links"><a href="http://www.payworks.ca/payroll-resources.asp">resource centre</a><a href="http://www.payworks.ca/help-support.asp">help</a><a href="http://www.payworks.ca/payworks-legal-info.asp">legal</a><a href="http://www.payworks.ca/payroll-quote.asp">quick quote</a><a href="http://www.payworks.ca/join-payworks-payroll-services.asp">sign up</a><a href="http://www.payworks.ca/payworks-canada-privacy-policy.asp">privacy</a><a href="#" onclick="javascript: window.open('https://payroll.payworks.ca', '', 
-'fullscreen=no,resizable=1,toolbar=0,menubar=1,scrollbars=1');">web payroll login</a></div>
+              <div id="footer-links"><a href="http://www.payworks.ca/payroll-resources.asp">resource centre</a><a href="http://www.payworks.ca/help-support.asp">help</a><a href="http://www.payworks.ca/payworks-legal-info.asp" rel="nofollow">legal</a><a href="http://www.payworks.ca/payroll-quote.asp">quick quote</a><a href="http://www.payworks.ca/join-payworks-payroll-services.asp">sign up</a><a href="http://www.payworks.ca/payworks-canada-privacy-policy.asp" rel="nofollow">privacy</a><a href="#" onclick="javascript: window.open('https://payroll.payworks.ca', '', 
+'fullscreen=no,resizable=1,toolbar=0,menubar=1,scrollbars=1');" rel="nofollow">web payroll login</a></div>
+ <div class="copyright">&nbsp;Copyright ©2008
+			Payworks Inc.&nbsp;|&nbsp;582 King Edward St. Winnipeg, Manitoba, R3H 0P1&nbsp;</div>
+   
 </td>
     <td rowspan="2">&nbsp;</td>
     <td width="40" rowspan="2" id="rightcolumn">&nbsp;</td>
