--- a/l/li/liv/liveops.com.html
+++ b/l/li/liv/liveops.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the liveops.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218131529id_/http%3A//www.liveops.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the liveops.com privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608004357id_/http%3A//www.liveops.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -30,7 +30,7 @@
 </div>
 
 <!--  GENERAL NAVIGATION -->
-<div id="generalNav"><a href="/company/contact-us.html">Contact LiveOps</a> &nbsp;|&nbsp; <a href="/resource-library/index.html">Resource Library</a> &nbsp;|&nbsp; <a href="/become-agent/index.html">Become an Agent</a> &nbsp;|&nbsp; <a href="https://callcenter.liveops.com" rel="nofollow">Customer Login</a> &nbsp;|&nbsp; <a href="https://callcenter.liveops.com" rel="nofollow">Agent Login</a> &nbsp;|</div>
+<div id="generalNav"><a href="/company/contact-us.html">Contact LiveOps</a> &nbsp;|&nbsp; <a href="/resource-library/index.html">Resource Library</a> &nbsp;|&nbsp; <a href="/become-agent/index.html">Become an Agent</a> &nbsp;|&nbsp; <a href="https://callcenter.liveops.com" rel="nofollow" onclick="javascript: pageTracker._trackPageview(" links="" customer-login");"="">Customer Login</a> &nbsp;|&nbsp; <a href="https://callcenter.liveops.com" rel="nofollow" onclick="javascript: pageTracker._trackPageview(" links="" agent-login");"="">Agent Login</a> &nbsp;|</div>
 
 </div>
 <!-- HEADER SECTION - END ====================================================================================== -->
@@ -42,32 +42,24 @@
 <li><a href="/why-liveops/index.html" class="currentSectionL"><span class="currentSectionR">Why LiveOps</span></a>
 <ul class="dropdown">
 <li><a href="/why-liveops/index.html">Overview</a></li>
-<li><a href="/why-liveops/why-on-demand-call-center.html">Why On-Demand Call Center</a></li>
-<li><a href="/why-liveops/why-home-agents.html">Why Home Agents</a></li>
+<li><a href="/why-liveops/why-cloud-computing.html">Why Cloud Computing?</a></li>
 <li><a href="/why-liveops/complete-call-center.html">Only Complete Solution</a></li>
 <li><a href="/why-liveops/results.html">Breakthrough Results</a></li>
 <li><a href="/resource-library/index.html">Resource Library</a></li>
 </ul>
 </li>
-<li><a href="/ondemand-call-center/index.html"><span>Call Center Technology</span></a>
+<li><a href="/on-demand-contact-center/index.html"><span>On-Demand Contact Center</span></a>
 <ul class="dropdown">
-<li><a href="/ondemand-call-center/index.html">On-Demand Advantages</a></li>
-<li><a href="/ondemand-call-center/platform.html">Call Center Platform</a></li>
-<li><a href="/ondemand-call-center/applications.html">Call Center Applications</a></li>
+<li><a href="/on-demand-contact-center/index.html">Contact Center in the Cloud</a></li>
+<li><a href="/on-demand-contact-center/contact-center-platform.html">Contact Center Platform</a></li>
+<li><a href="/on-demand-contact-center/contact-center-applications.html">Contact Center Applications</a></li>
 </ul>
 </li>
-<li><a href="/home-agents/index.html"><span>Call Center Outsourcing</span></a>
+<li><a href="/on-demand-outsourcing/index.html"><span>On-Demand Outsourcing</span></a>
 <ul class="dropdown">
-<li><a href="/home-agents/index.html">Overview</a></li>
-<li><a href="/home-agents/direct-response.html">Direct Response</a></li>
-<li><a href="/home-agents/customer-acquisition.html">Customer Acquisition</a></li>
-<li><a href="/home-agents/revenue-maximization.html">Revenue Maximization</a></li>
-<li><a href="/home-agents/customer-services.html">Customer Service</a></li>
-<li><a href="/home-agents/customer-retention.html">Customer Retention</a></li>
-<li><a href="/home-agents/disaster-relief.html">Disaster Relief</a></li>
-<li><a href="/home-agents/incident-response.html">Incident Response</a></li>
-<li><a href="/home-agents/fundraising.html">Fundraising</a></li>
-<li><a href="/home-agents/political-outbound.html">Political Outbound</a></li>
+<li><a href="/on-demand-outsourcing/index.html">Benefits of Remote Agents</a></li>
+<li><a href="/on-demand-outsourcing/industry-practices.html">Industry Practices</a></li>
+<li><a href="/on-demand-outsourcing/call-center-outsourcing-services.html">Call Center Outsourcing</a></li>
 </ul>
 </li>
 <li><a href="/client-services/index.html"><span>Client Services</span></a>
@@ -77,7 +69,8 @@
 </li>
 <li><a href="/customers/index.html"><span>Customers</span></a>
 <ul class="dropdown">
-<li><a href="/customers/index.html">Customer Gallery</a></li>
+<li><a href="/customers/index.html">Customer Testimonials</a></li>
+<li><a href="/resource-library/index.html#_casestudies">Customer Case Studies</a></li>
 </ul>
 </li>
 <li><a href="/partners/index.html"><span>Partners</span></a>
@@ -170,10 +163,11 @@
 </div>
 <div id="footerBG"></div>
 <br><br>
+
 <div id="footerSection">
 <a href="/why-liveops/index.html">Why LiveOps</a> | 
-<a href="/ondemand-call-center/index.html">Call Center Technology</a> | 
-<a href="/home-agents/index.html">Call Center Outsourcing</a> | 
+<a href="/on-demand-contact-center/index.html">On-Demand Contact Center</a> | 
+<a href="/on-demand-outsourcing/index.html">On-Demand Outsourcing</a> | 
 <a href="/client-services/index.html">Client Services</a> | 
 <a href="/customers/index.html">Customers</a> | 
 <a href="/partners/index.html">Partners</a> | 
@@ -183,11 +177,19 @@
 <a href="https://callcenter.liveops.com">Agent Login</a> | 
 <a href="/sitemap.html">Sitemap</a>
 <br>
-© 2008 LiveOps, Inc. |
-<a href="/why-liveops/index.html">The Virtual Call Center Company</a>™ | 
-<a href="/why-liveops/why-home-agents.html">The Call Center Has Left The Building</a>™ | 
+© 2009 LiveOps, Inc. |
+<a href="/on-demand-contact-center/index.html">Contact Center in the Cloud</a>™ | 
+<a href="/on-demand-outsourcing/index.html">The Call Center Has Left The Building</a>™ | 
 <a href="/terms.html">Terms of Use</a> | 
-<a href="/privacy.html">Privacy Policy</a></div>
+<a href="/privacy.html">Privacy Policy</a><br>
+<br>
+
+<!-- AddThis Button BEGIN -->
+<script type="text/javascript">var addthis_pub="derba";var addthis_brand = "LiveOps ";var addthis_header_color = "#ffffff"; var addthis_header_background = "#568ab3";</script>
+<a href="http://www.addthis.com/bookmark.php?v=20" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s7.addthis.com/static/btn/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"></a><script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script>
+<!-- AddThis Button END -->
+
+</div>
 
 <!-- START ANALYTICS -->
 
@@ -203,10 +205,17 @@ pageTracker._trackPageview();
 </script>
 <!-- End Google Analytics code -->
 
+
+<!-- Begin Marketo Code -->
+<script src="http://munchkin.marketo.net/munchkin.js" type="text/javascript"></script>
+<script>mktoMunchkin("910-SYM-910");</script>
+<!-- End Marketo Code -->
+
 <!-- Begin LeadLander Code -->
 <script type="text/javascript" language="javascript">i=12733</script>
 <script type="text/javascript" language="javascript" src="http://t3.trackalyzer.com/trackalyze.js"></script> 
 <!-- End LeadLander Code -->
+
 
 <!-- Start Quantcast tag -->
 <script type="text/javascript">
@@ -216,9 +225,11 @@ qacct:"p-36WUNwUjxpckU"
 </script>
 <script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
 <noscript>
-<a href="http://www.quantcast.com/p-36WUNwUjxpckU" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-36WUNwUjxpckU.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/></a>
+<img src="http://pixel.quantserve.com/pixel/p-36WUNwUjxpckU.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
 </noscript>
 <!-- End Quantcast tag -->
+
+
 
 <!-- END ANALYTICS -->
 </div>
