--- a/t/th/the/theathletesfoot.com.au.html
+++ b/t/th/the/theathletesfoot.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the theathletesfoot.com.au privacy policy that was archived on 2008-10-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081002084357id_/http%3A//www.theathletesfoot.com.au/content.cfm%3Fpid%3D4825) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the theathletesfoot.com.au privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608012722id_/http%3A//theathletesfoot.com.au/content.cfm%3Fpid%3D4825) for the most accurate reproduction.-->
 
 <html><head>
 	<title>The Athletes Foot</title>
@@ -28,7 +28,7 @@
 				<tbody><tr valign="top">
 					<td colspan="3" width="577" bgcolor="#FFFFFF">
 						<table border="0" cellspacing="0" cellpadding="0">
-							<tbody><tr><td><a href="content.cfm?pid=0"><img src="http://www.theathletesfoot.com.au/images/navigationheader/header_577x180_shop_female.jpg" width="577" height="180" border="0" alt=""></a></td></tr>
+							<tbody><tr><td><a href="content.cfm?pid=0"><img src="http://www.theathletesfoot.com.au/images/navigationheader/header_577x180_sign_male.jpg" width="577" height="180" border="0" alt=""></a></td></tr>
 							<tr>
 								<td>
 									<table border="0" cellspacing="0" cellpadding="0">
