snorgtees.com (archived on 2009-06-08)
{
  "alexa_rank": 15221,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 2403,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.9,
  "homepage_snapshot_redirected_domain": "snorgtees.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331140536id_/http://www.snorgtees.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331140536id_/http%3A//snorgtees.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "snorgtees.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090608074153id_/http%3A//www.snorgtees.com/privacy.php",
  "policy_title": "",
  "policy_url": "snorgtees.com/privacy.php",
  "sha1": "bfa1d13c3ca92ec1a2a0d41a78b5f8d0b55594a6",
  "simhash": 6551308534227853724,
  "simhash_updated": true,
  "site_hostname": "snorgtees.com",
  "site_url": "http://snorgtees.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20090608074153",
  "word_count": 409,
  "year": 2009
}

--- a/s/sn/sno/snorgtees.com.html
+++ b/s/sn/sno/snorgtees.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the snorgtees.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011937id_/http%3A//www.snorgtees.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the snorgtees.com privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608074153id_/http%3A//www.snorgtees.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html dir="LTR" lang="en"><head>
   <title></title>
@@ -209,8 +209,7 @@ If you are under the age of 13, you are not permitted to submit any personal inf
 </td></tr>
 <tr height="5"><td></td></tr>
 <tr><td align="center" class="smallText">
-<font color="white">Copyright © 2004 - 2008 Digital Basement LLC.</font><img src="https://secure.fastclick.net/rt?cn1=urt70&amp;v1=a" width="1" height="1" border="0">
-    </td>
+<font color="white">Copyright © 2004 - 2009 Digital Basement LLC.</font>    </td>
   </tr>
 </tbody></table>
 
