folkd.com (archived on 2009-06-08)
{
  "alexa_rank": 3100,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 5823,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.77,
  "homepage_snapshot_redirected_domain": "folkd.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090401054508id_/http://www.folkd.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090401054508id_/http%3A//folkd.com",
  "interval": "2009_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "folkd.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090608121533id_/http%3A//www.folkd.com/page/privacy.html",
  "policy_title": "folkd.com - Enrich your websurfing experience",
  "policy_url": "folkd.com/page/privacy.html",
  "sha1": "44a40f79cafb90c220ffa42c3d5bb155031fafbd",
  "simhash": 16009859489268086885,
  "simhash_updated": false,
  "site_hostname": "folkd.com",
  "site_url": "http://folkd.com",
  "smog": 10.93,
  "strict_updated": false,
  "timestamp": "20090608121533",
  "word_count": 959,
  "year": 2009
}

--- a/f/fo/fol/folkd.com.html
+++ b/f/fo/fol/folkd.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the folkd.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217020203id_/http%3A//www.folkd.com/page/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the folkd.com privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608121533id_/http%3A//www.folkd.com/page/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="content-type" content="application/xhtml+xml;  charset=utf-8">
@@ -93,10 +93,10 @@
 	<div id="container">
 		<div id="header">
 			<div id="flags">
-											<a href="/page/privacy.html?lang=en"><img src="/images/flag-usa.gif" alt="use english" style="vertical-align:middle;"></a>
-				<a href="/page/privacy.html?lang=de"><img src="/images/flag-germany.gif" alt="use german" style="vertical-align:middle;"></a>
-				<a href="/page/privacy.html?lang=es"><img src="/images/flag-spain.gif" alt="use spanish" style="vertical-align:middle;"></a>
-				<a href="/page/privacy.html?lang=fr"><img src="/images/flag-france.gif" alt="use french" style="vertical-align:middle;"></a><br>
+											<a href="/page/privacy.html?lang=en" rel="nofollow"><img src="/images/flag-usa.gif" alt="use english" style="vertical-align:middle;"></a>
+				<a href="/page/privacy.html?lang=de" rel="nofollow"><img src="/images/flag-germany.gif" alt="use german" style="vertical-align:middle;"></a>
+				<a href="/page/privacy.html?lang=es" rel="nofollow"><img src="/images/flag-spain.gif" alt="use spanish" style="vertical-align:middle;"></a>
+				<a href="/page/privacy.html?lang=fr" rel="nofollow"><img src="/images/flag-france.gif" alt="use french" style="vertical-align:middle;"></a><br>
 				<a href="/page/explore.html">Explore</a> · <a href="/page/feedback.html">Help / Feedback</a> ·  <a href="http://twitter.com/folkd">twitter</a>
 			</div>
 
@@ -261,37 +261,37 @@
 		</div>
 			
 	<div id="footer">
-	<div style="width:120px; float:left;" class="grey">Folkd.com service:</div> 
-		<a href="/page/about.html">About folkd.com</a>
-		· <a href="/page/download.html">Download</a>
-		· <a href="/page/features.html">Features and Facts</a>
-		· <a href="/page/tour.html">Quick intro</a>
-		· <a href="/page/proaccount.html">Pro Account</a>
+	<div style="width:220px; float:left;"><span class="grey">About folkd.com:</span><br> 
+                · <a href="/page/tour.html">Quick intro</a><br>
+                · <a href="/page/download.html">Download Browser Buttons</a><br>
+		· <a href="/page/about.html">About the service</a><br>
+	<!--	&middot; <a href="/page/features.html">Features and Facts</a><br />-->
 		· <a href="/page/credits.html">Credits</a><br>
-	<div style="float:left;width:120px;" class="grey">About the business:</div>
-		<a href="/page/contact.html">Contact</a>	
-		· <a href="/page/advertising.html">Advertising</a>
-		· <a href="/page/press.html">Press</a>
+	</div>
+	
+	<div style="float:left;width:150px;"><span class="grey">Business:</span><br>
+		· <a href="/page/contact.html">Contact</a><br>	
+		· <a href="/page/advertising.html">Advertising</a><br>
+		· <a href="/page/press.html">Press</a><br>
+	</div>
+	<div style="width:180px; float:left;"><span class="grey">Legal:</span><br>
+		· <a href="/page/terms.html">Terms of Use</a><br>
+		· <a href="/page/privacy.html">Privacy</a> <br>
+		· <a href="/page/copyright.html">Copyright Policy</a><br>
+	</div>	
+		
+	<div style="float:left;"><span class="grey">Get involved:</span><br>
+				· <a href="/page/invite.html">Invite your Friends</a><br>
+                · <a href="/page/proaccount.html">Get a Pro Account</a><br>
+		· <a href="/page/webpublishers.html">Buttons for your Webpage</a>
+	</div>
+	
+		
+ 	<div class="grey size12" style="margin-top:7px; text-align:center;clear:both">
+		© 2006 - 2009 - folkd.com - all rights reserved - <span class="grey">Partner:</span> <a href="http://www.pressebox.de">PresseBox</a>
+	</div>
 
-	<div style="margin:0 13px 0 25px;" class="grey inline">Legal:</div>
-		<a href="/page/terms.html">Terms of Use</a>
-		· <a href="/page/privacy.html">Privacy</a>
-		· <a href="/page/copyright.html">Copyright Policy</a>
-		
-		<br>
-		
-	<div style="float:left; width:120px;" class="grey">Spread folkd.com:</div>
-		<a href="/page/folkdcommunity.html">Community</a>
-		· <a href="/page/invite.html">Invite your Friends</a>
-		· <a href="/page/webpublishers.html">folkd for Web Publishers</a>
-	
-	<div style="margin-left:20px;" class="grey inline">Partner:</div>
-		<a href="http://www.pressebox.de">PresseBox</a>		<br>
-	
-		
- 	<div class="grey size12" style="margin-top:7px; text-align:center;">
-		© 2006 - 2008 - folkd.com - all rights reserved<br>
-</div>
+
 <script src="/js/scriptaculous/lib/prototype.js" language="javascript" type="text/javascript"></script>
 <script src="/js/scriptaculous/src/scriptaculous.js" language="javascript" type="text/javascript"></script><script type="text/javascript" src="https://web.archive.org/js/scriptaculous/src/builder.js"></script><script type="text/javascript" src="https://web.archive.org/js/scriptaculous/src/effects.js"></script><script type="text/javascript" src="https://web.archive.org/js/scriptaculous/src/dragdrop.js"></script><script type="text/javascript" src="https://web.archive.org/js/scriptaculous/src/controls.js"></script><script type="text/javascript" src="https://web.archive.org/js/scriptaculous/src/slider.js"></script>
 <script src="/js/common.js" language="javascript" type="text/javascript"></script>
@@ -311,4 +311,4 @@ pageTracker._trackPageview();
 </script>
 
 
-<!-- q / i4 --></body></html>
+</body></html>
