--- a/p/ph/phe/pheedo.com.html
+++ b/p/ph/phe/pheedo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pheedo.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216025121id_/http%3A//www.pheedo.com/site/corp_privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pheedo.com privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608122726id_/http%3A//www.pheedo.com/site/corp_privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 		<title>Pheedo :: Privacy</title>
@@ -21,24 +21,17 @@
 		<div class="container corporate">
 		
 			<div class="head">
-                <script type="text/javascript">
-                    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-                    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-                    </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-                    <script type="text/javascript">
-                    var pageTracker = _gat._getTracker("UA-4415588-1");
-                    pageTracker._setDomainName("none");
-                    pageTracker._setAllowLinker(true);
-                    pageTracker._initData();
-                    pageTracker._trackPageview();
-                </script>			
 				<h1><a href="./" title="pheedo - rss marketing solutions">pheedo - rss marketing solutions</a></h1>
 			
 				<ul class="tr_nav">
-					<li><a href="/account">login</a></li> |
-					<li><a href="./corp_company.php">company</a></li> |
-					<li><a href="http://www.pheedo.info" onclick="pageTracker._link(this.href); return false;">blog</a></li> |
-					<li><a href="./corp_faq.php">faq</a></li> |
+					<li><a href="/account">login</a></li>
+					<li class="spacer"> </li>
+					<li><a href="./corp_company.php">company</a></li>
+					<li class="spacer"> </li>
+					<li><a href="http://www.pheedo.info" onclick="pageTracker._link(this.href); return false;">blog</a></li>
+					<li class="spacer"> </li>
+					<li><a href="./corp_faq.php">faq</a></li>
+					<li class="spacer"> </li>
 					<li><a href="./corp_contact.php">contact</a></li>
 				</ul>
 			
@@ -315,8 +308,19 @@
 				
 				
 				<div class="copy">
-					<p>© 2008 Pheedo, Inc. All rights reserved. <a href="./corp_privacy.php">Privacy Policy</a> | <a href="./corp_tos.php">Terms of Service</a>.</p>
+					<p>© 2009 Pheedo, Inc. All rights reserved. <a href="./corp_privacy.php">Privacy Policy</a> | <a href="./corp_tos.php">Terms of Service</a>.</p>
 				</div>
+                <script type="text/javascript">
+                    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+                    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+		<script type="text/javascript">
+                    var pageTracker = _gat._getTracker("UA-4415588-1");
+                    pageTracker._setDomainName("none");
+                    pageTracker._setAllowLinker(true);
+                    pageTracker._initData();
+                    pageTracker._trackPageview();
+                </script>			
 			</div> <!-- close foot -->
 			
 		</div> <!-- close container -->
